# nima

./: .gitignore  README.md  nima.db  pyproject.toml
dashboard/: index.html
nima/: __main__.py  api.py  cli.py  db.py  extractor.py  models.py
tests/: test_extractor.py
