[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nima"
version = "0.1.0"
description = "Unthreading public municipal data for civic clarity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "sqlmodel>=0.0.19",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",   # for FastAPI test client
]

[project.scripts]
nima = "nima.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]